views/rss: redesign da página
Em geral, criamos um header (navbar) a ser usado por todas as
páginas do site, e mostramos as notícias como uma lista de
cards.

Co-authored-by: kex1998 <kkelvin2@hotmail.com>
Co-authored-by: funnyprogrammer <joon.kim@usp.br>

--- a/app/views/rss/search.html.erb
+++ b/app/views/rss/search.html.erb
@@ -1,5 +1,5 @@
 <h1>Notícias à respeito de <%= @keyword %> </h1>
 
 <% @items.each do |item| %>
-    <p><%= item.title %></p>
+    <%= render partial: "news_card", locals: { item: item } %>
 <% end %>
