--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,20 @@
 body {
     width: 100%;
     height: 100vh;
-    color: #fff;
-    background: linear-gradient(to bottom, #051937, #002361, #00296b, #2028b3, #5816d6);
+    // color: #fff;
+    background-image: linear-gradient(to right top, #533fde, #273cb9, #003593, #002b6c, #001f45, #042a4a, #11344d, #213e50, #2a697f, #3097ab, #3ec8d2, #5ffbf1);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: Oswald;
+}
+
+h1 {
+    font-weight: bold;
+    font-family: "Archivo Black";
+    color: white;
+
+}
+
+.navbar {
+    border-radius: 30px;
 }
