--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,19 +4,21 @@
     <title>Whispr</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Oswald" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.google.com/?selection.family=Archivo+Black" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  
   </head>
-
   <body>
-  <div class ="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Whispr</a>
+      <%= link_to({ controller: "application", action: "hello" }, method: "get", class: "navbar-brand") do %>
+        <img src="https://image.flaticon.com/icons/svg/124/124021.svg" width="30" height="30" class="rounded-circle" alt="">
+        Whispr
+      <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,19 +26,26 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">
+              Home 
+            <span class="sr-only">(current)</span></a>
           </li> 
           <li class="nav-item">
             <a class="nav-link" href="#">Config</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Select by 
+              Select by
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Favourites</a>
               <a class="dropdown-item" href="#">Recents</a>
-              <a class="dropdown-item" href="#">HOT</a>
+              <a class="dropdown-item" href="#">
+                <p style="margin:0">
+                <img src="https://media0.giphy.com/media/47GPQ7ZzivsemHKPvB/source.gif" width="30" height="30" class="d-inline-block align-top" alt="">
+                HOT
+                </p>
+              </a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
@@ -45,13 +54,49 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <%= form_tag({ controller: "rss", action: "search" }, method: "get", class: "form-inline my-2 my-lg-0") do %>
+          <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+        <% end %>
+
+        <%# TODO Adicionar verificação de usuário logado %>
+        <% if true %>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                (user name)
+              </a>  
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Bem vindo! (UserName)</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Perfil</a>
+                <a class="dropdown-item" href="#">Preferências</a>
+                <a class="dropdown-item" href="#">HOT</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Configurações</a>
+                <a class="dropdown-item" href="#">Sair</a>
+              </div>
+            </li>
+          </ul>
+        <% else %>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Conta
+              </a>  
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Entrar</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Criar Conta</a>
+              </div>
+            </li>
+          </ul>
+        <% end %>
       </div>
     </nav>
 
-    <%= yield %>
+    <div class ="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
