--- a/app/views/rss/index.html.erb
+++ b/app/views/rss/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Noticias</h1>
+<h1 style = "font-size:40px;text-align:center;">
+    ~Notícias~
+</h1>
 
 <% @items.each do |item| %>
-    <p><%= item.title %></p>
+    <%= render partial: "news_card", locals: { item: item } %>
 <% end %>
