--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <%= link_to({ controller: "application", action: "hello" }, method: "get", class: "navbar-brand") do %>
+      <%= link_to({ controller: "/application", action: "hello" }, method: "get", class: "navbar-brand") do %>
         <img src="https://image.flaticon.com/icons/svg/124/124021.svg" width="30" height="30" class="rounded-circle" alt="">
         Whispr
       <% end %>
@@ -54,7 +54,7 @@
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
-        <%= form_tag({ controller: "rss", action: "search" }, method: "get", class: "form-inline my-2 my-lg-0") do %>
+        <%= form_tag({ controller: "/rss", action: "search" }, method: "get", class: "form-inline my-2 my-lg-0") do %>
           <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
         <% end %>
@@ -96,6 +96,8 @@
     </nav>
 
     <div class ="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
   </body>
