--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ body {
 
 h1 {
     font-weight: bold;
-    font-family: "Archivo Black";
+    font-size: 80px;
     color: white;
 
 }
@@ -21,6 +21,6 @@ h1 {
 }
 
 .center {
-    padding: 40% 0;
+    padding: 10% 0;
     text-align: center;
 }
