--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,6 @@
-<h1 class="center">BEM VINDO!<h1>
-<%= link_to "Sign Up", new_user_registration_path %>
-
+<body>
+  <div class="container center">
+    <h1>BEM VINDO!<h1>
+    <button class="btn btn-dark"><%= link_to "Sign Up", new_user_registration_path %></button>
+  </div>
+</body>
