Atualizacao na pagina inicial (falta acrescentar caminhos para cadastro e login)

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,7 +1,11 @@
-<body>
-  <div class="container center">
-    <h1>BEM VINDO!</h1>
-    <button class="btn btn-dark"><%= link_to "Criar Conta", new_user_registration_path %></button>
-    <button class="btn btn-light"><%= link_to "Login", new_user_session_path %></button>
-  </div>
-</body>
+<h1 class="center" vertical-align="text-bottom"> Bem Vindo! </h1>
+
+
+
+<%= link_to "Criar Conta", new_user_registration_path do %>
+<div class="button instagram"><span class="gradient"></span>Cadastrar</div>
+<% end %>
+<br>
+<%= link_to "Login", new_user_session_path do %>
+<div class="button instagram"><span class="gradient"></span>Entrar</div>
+<% end %>
