--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,6 +1,7 @@
 <body>
   <div class="container center">
-    <h1>BEM VINDO!<h1>
-    <button class="btn btn-dark"><%= link_to "Sign Up", new_user_registration_path %></button>
+    <h1>BEM VINDO!</h1>
+    <button class="btn btn-dark"><%= link_to "Criar Conta", new_user_registration_path %></button>
+    <button class="btn btn-light"><%= link_to "Login", new_user_session_path %></button>
   </div>
 </body>
