--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,9 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">
-              Home 
+              Home
             <span class="sr-only">(current)</span></a>
-          </li> 
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Config</a>
           </li>
@@ -60,21 +60,21 @@
         <% end %>
 
         <%# TODO Adicionar verificação de usuário logado %>
-        <% if true %>
+        <% if user_signed_in? %>
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                (user name)
-              </a>  
+                Meu Whispr
+              </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Bem vindo! (UserName)</a>
+                <a class="dropdown-item" href="#">Sua Conta</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Perfil</a>
                 <a class="dropdown-item" href="#">Preferências</a>
                 <a class="dropdown-item" href="#">HOT</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Configurações</a>
-                <a class="dropdown-item" href="#">Sair</a>
+                <%= link_to "Sair", destroy_user_session_path, method: :delete, :class => "dropdown-item"%>
               </div>
             </li>
           </ul>
@@ -83,11 +83,11 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Conta
-              </a>  
+              </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Entrar</a>
+                <%= link_to "Entrar", new_user_session_path, :class => "dropdown-item"%>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Criar Conta</a>
+                <%= link_to "Criar Conta", new_user_registration_path, :class => "dropdown-item"%>
               </div>
             </li>
           </ul>
