--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,11 +1,8 @@
 <h1 class="center" vertical-align="text-bottom"> Bem Vindo! </h1>
-
-
-
-<%= link_to "Criar Conta", new_user_registration_path do %>
+<%= link_to new_user_registration_path do %>
 <div class="button instagram"><span class="gradient"></span>Cadastrar</div>
 <% end %>
 <br>
-<%= link_to "Login", new_user_session_path do %>
+<%= link_to new_user_session_path do %>
 <div class="button instagram"><span class="gradient"></span>Entrar</div>
 <% end %>
