--- a/app/views/rss/index.html.erb
+++ b/app/views/rss/index.html.erb
@@ -1,6 +1,6 @@
-<h1 style = "font-size:40px;text-align:center;">
+<title style = "font-size:40px;text-align:center;">
     ~Notícias~
-</h1>
+</title>
 
 <% @items.each do |item| %>
     <%= render partial: "news_card", locals: { item: item } %>
