--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <%= link_to({ controller: "application", action: "hello" }, method: "get", class: "navbar-brand") do %>
+      <%= link_to({ controller: "/application", action: "hello" }, method: "get", class: "navbar-brand") do %>
         <img src="https://image.flaticon.com/icons/svg/124/124021.svg" width="30" height="30" class="rounded-circle" alt="">
         Whispr
       <% end %>
