--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -2,8 +2,8 @@
     <div class="card-body">
         <h5 class="card-title"><%= item.title %></h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text"><%= strip_tags(item.description) %></p>
-        <a href="<%= item.link %>" class="card-link">Ler a notícia</a>
+        <p class="card-text"><%= strip_tags(item.summary) %></p>
+        <a href="<%= item.url %>" class="card-link">Ler a notícia</a>
         <a href="#" class="card-link">Another link</a>
     </div>
 </div>
