Fazendo pequenas mudanças

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <body>
-  <div class="center">
+  <div class="center text-white">
     <h1>Join Whispr!</h1><br>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -29,5 +29,5 @@
     <% end %>
 
     <%= render "devise/shared/links" %>
-  <div class="center">
+  </div>
 </body>
