Mexendo no CSS de Login e Cadastro (#25)
* Changing Login and Sign Up screens to match Whispr identity.

* Fazendo pequenas mudanças

* news tambem tem text-white

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="center" vertical-align="text-bottom"> Bem Vindo! </h1>
+<h1 class="center text-white" vertical-align="text-bottom"> Bem Vindo! </h1>
 <%= link_to new_user_registration_path do %>
 <div class="button instagram"><span class="gradient"></span>Cadastrar</div>
 <% end %>
