--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -3,7 +3,6 @@
         <h5 class="card-title"><%= item.title %></h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
         <p class="card-text"><%= strip_tags(item.summary) %></p>
-        <a href="<%= item.url %>" class="card-link">Ler a notícia</a>
-        <a href="#" class="card-link">Another link</a>
+        <a href="<%= item.url %>" target=_blank class="card-link">Ler a notícia</a>
     </div>
 </div>
