--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -1,4 +1,7 @@
-<div class="card border-light mb-3">
+<div class="news-card card border-light mb-3 d-flex flex-row">
+    <% if item.image_url %>
+        <img src="<%= item.image_url %>"/>
+    <% end %>
     <div class="card-body">
         <h5 class="card-title"><%= item.title %></h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
