--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,6 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
         <% end %>
 
-        <%# TODO Adicionar verificação de usuário logado %>
         <% if user_signed_in? %>
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
@@ -73,7 +72,7 @@
                 <a class="dropdown-item" href="#">Sua Conta</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Perfil</a>
-                <a class="dropdown-item" href="#">Preferências</a>
+                <a class="dropdown-item" href="#">Favoritos</a>
                 <a class="dropdown-item" href="#">HOT</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Configurações</a>
