--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -1,8 +1,14 @@
+
+
 <div class="card border-light mb-3">
     <div class="card-body">
         <h5 class="card-title"><%= item.title %></h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
         <p class="card-text"><%= strip_tags(item.summary) %></p>
-        <a href="<%= item.url %>" target=_blank class="card-link">Ler a notícia</a>
-    </div>
+	<a href="<%= item.url %> "target=_blank class="card-link">
+        <button type="button" class="btn btn-primary">Ler a notícia</button>
+	</a>
+	<a target=_blank class="card-link">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">		
+    </div>	
 </div>
