--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -1,4 +1,39 @@
+<script>
+	function upvoteID(id){
+    		$.ajax({
+       		'url' : '/news/like',
+        	'type' : 'GET',
+        	'data' : {id},
+        	'success' : function(data) {              
+            		document.getElementById("like_button_" + id).innerHTML = data
+        	},
+        	'error' : function(request,error)
+        	{
+            	alert("Você não está logado no sistema! Ace");
+        	}
+    		});
+	}
 
+	function downvoteID(id){
+    		$.ajax({
+
+       		'url' : '/news/dislike',
+        	'type' : 'GET',
+        	'data' : {id},
+        	'success' : function(data) {              
+            		document.getElementById("like_button_" + id).innerHTML = data
+        	},
+        	'error' : function(request,error)
+        	{
+            	alert("Request: "+JSON.stringify(request));
+        	}
+    		});
+	}
+	
+	function downVoteImage(x) {
+		x.classList.toggle("fa-thumbs-down");
+	} 
+</script>
 
 <div class="card border-light mb-3">
     <div class="card-body">
