Implementando scripts JS + corrigindo erros nos códigos do controlador

--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -9,7 +9,7 @@
         	},
         	'error' : function(request,error)
         	{
-            	alert("Você não está logado no sistema! Ace");
+            	alert("Erro no sistema!");
         	}
     		});
 	}
@@ -25,7 +25,7 @@
         	},
         	'error' : function(request,error)
         	{
-            	alert("Request: "+JSON.stringify(request));
+            	alert("Erro no sistema");
         	}
     		});
 	}
