views/news_card: melhorar aparencia dos cards

--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -1,6 +1,6 @@
 <div class="news-card card border-light mb-3 d-flex flex-row">
     <% if item.image_url %>
-        <img src="<%= item.image_url %>"/>
+        <div class="card-image" style="background-image: url('<%= item.image_url %>');"></div>
     <% end %>
     <div class="card-body">
         <h5 class="card-title"><%= item.title %></h5>
