--- a/app/assets/stylesheets/news.scss
+++ b/app/assets/stylesheets/news.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the news controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.news-card div.card-image {
+    width: 30%;
+    min-height: 15em;
+    max-height: 100%;
+    background-size: cover;
+    background-position: center center;
+    flex-shrink: 0.2;
+}
