Arrumando migração e sugestões do ramon, passei a lógica de checar se a notícia existe ou não pra view

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -5,5 +5,5 @@
 <% end %>
 
 <% @items.each do |item| %>
-    <%= render partial: "favorites_card", locals: { item: item } %>
+    <%= render partial: "news/news_card", locals: { item: item } %>
 <% end %>
