feature-most_accessed corrigida + eliminação de códigos desnecessários (opções do navi-bar sem utilidade) + correção da tela de bem-vindo: depois de logar ainda aparecia cadastrar

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,8 +1,11 @@
 <h1 class="center text-white" vertical-align="text-bottom"> Bem Vindo! </h1>
+<% if user_signed_in? %>
+<% else %>
 <%= link_to new_user_registration_path do %>
 <div class="button instagram"><span class="gradient"></span>Cadastrar</div>
 <% end %>
 <br>
 <%= link_to new_user_session_path do %>
 <div class="button instagram"><span class="gradient"></span>Entrar</div>
+<% end %>
 <% end %>
