Corrigindo nome do botão de Mais acessados, corrigindo o limite de texto que cada notícia tem e removendo o subtitulo (nao existe).

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,3 +103,10 @@ count{
 		background: radial-gradient(90px circle at top center, rgba(238,88,63,.5) 30%, rgba(255,255,255,0));
 	}
 }
+
+p{
+	width:1050px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
