--- a/app/views/news/search_by_access.html.erb
+++ b/app/views/news/search_by_access.html.erb
@@ -1,5 +1,5 @@
 <% if @itemsOrdered.length > 0 %>
-    <h1 class="text-white">Notícias ordenadas à respeito de <%= @keyword %></h1>
+    <h1 class="text-white">Notícias recentes mais acessadas <%= @keyword %></h1>
 <% else %>
     <h1 class="text-white">Nenhuma notícia encontrada</h1>
 <% end %>
