--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 		<%= link_to({ controller: "/news", action: "search_by_access" }, method: "get") do %>
                 <p style="margin:0">
                 <img src="https://media0.giphy.com/media/47GPQ7ZzivsemHKPvB/source.gif" width="30" height="30" class="d-inline-block align-top" alt=""></img>
-                Novos
+                Mais acessados
                 </p>
 		<% end %>
               </a>
