--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -21,9 +21,8 @@
 
 <div class="card border-light mb-3">
     <div class="card-body">
-        <h5 class="card-title"><%= item.title %></h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text"><%= strip_tags(item.summary) %></p>
+        <h5 class="card-title"><%= item.title %></h5>	
+        <p class="card-text" maxlength="1"><%= strip_tags(item.summary) %></p>
 	<a href="<%= item.url %> "target=_blank class="card-link">
         <button type="button" onclick="access_counter(<%= item.id %>)" class="btn btn-primary">Ler a notícia</button>
 	<span id="like_button_<%= item.id %>" class="count">
