--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,18 +38,20 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Favourites</a>
               <a class="dropdown-item" href="#">Recents</a>
-              <a class="dropdown-item" href="#">
+              <a class="dropdown-item">
+		<%= link_to({ controller: "/news", action: "search_by_access" }, method: "get") do %>
                 <p style="margin:0">
-                <img src="https://media0.giphy.com/media/47GPQ7ZzivsemHKPvB/source.gif" width="30" height="30" class="d-inline-block align-top" alt="">
-                HOT
+                <img src="https://media0.giphy.com/media/47GPQ7ZzivsemHKPvB/source.gif" width="30" height="30" class="d-inline-block align-top" alt=""></img>
+                Mais acessados
                 </p>
+		<% end %>
               </a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="about">
+            <a class="nav-link" href="/about">
               Sobre
             <span class="sr-only">(current)</span></a>
           </li>
