--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
+/*
+    *= require_self
+    *= require_tree .
+*/
+
 @import "bootstrap";
 body {
     width: 100%;
@@ -73,13 +78,6 @@ h1 {
 	animation: 18s linear 0s infinite move;
 }
 
-count{
-  padding-left:10%;
-  width:30%;
-  height:30%;
-  align:"left";
-}
-
 @keyframes move {
 	0% {
 		transform: translatex(-140px);
@@ -102,11 +100,4 @@ count{
 		transform: translatex(-140px);
 		background: radial-gradient(90px circle at top center, rgba(238,88,63,.5) 30%, rgba(255,255,255,0));
 	}
-}
-
-p{
-	width:1050px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
