--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,7 @@
 <% if @items.length > 0 %>
-    <h1 class="text-white">Notícias favoritas</h1>
+    <h1>Notícias favoritas</h1>
 <% else %>
-    <h1 class="text-white">Nenhuma notícia favoritada</h1>
+    <h1>Nenhuma notícia favoritada</h1>
 <% end %>
 
 <% @items.each do |item| %>
