--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,17 +1,33 @@
 <% if user_signed_in? %>
-  <h2 class="text-white"> Notícias para você </h2>
+  <h2> Notícias para você </h2>
 
   <% @items.each do |item| %>
       <%= render partial: "news/news_card", locals: { item: item } %>
   <% end %>
 
 <% else %>
-  <h1 class="center text-white" vertical-align="text-bottom"> Bem Vindo! </h1>
-  <%= link_to new_user_registration_path do %>
-  <div class="button instagram"><span class="gradient"></span>Cadastrar</div>
-  <% end %>
-  <br>
-  <%= link_to new_user_session_path do %>
-  <div class="button instagram"><span class="gradient"></span>Entrar</div>
-  <% end %>
+<h1 class="center" vertical-align="text-bottom"> Bem Vindo! </h1>
+<div class="container login-form">
+	<h2 class="login-title">- Entre na sua conta! -</h2>
+	<div class="panel panel-default">
+	    <div class="panel-body">
+	    <form>
+	    <%= link_to new_user_session_path do %>
+            <button class="btn btn-default reveal" type="button"><i class="glyphicon glyphicon-eye-open"></i></button>
+		</div>
+		<button class="btn btn-dark btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> 
+		Login	    
+	    </button>
+	    <% end %>
+	    <%= link_to new_user_registration_path do %>
+	    <button class="btn btn-default reveal" type="button"><i class="glyphicon glyphicon-eye-open"></i></button>
+		</div>
+		<button class="btn btn-dark btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> 
+		Registrar
+	    </button>
+	    <% end %>	
+	    </form>			
+	    </div>
+	</div>
+</div>
 <% end %>
