--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <body>
-  <div class="center text-white">
-    <h1>Join Whispr!</h1><br>
+  <div class="center">
+    <h1>Junte-se ao Whispr!</h1><br>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
