--- a/app/views/news/search.html.erb
+++ b/app/views/news/search.html.erb
@@ -1,7 +1,7 @@
 <% if @items.length > 0 %>
-    <h1 class="text-white">Notícias à respeito de <%= @keyword %></h1>
+    <h1>Notícias à respeito de <%= @keyword %></h1>
 <% else %>
-    <h1 class="text-white">Nenhuma notícia encontrada</h1>
+    <h1>Nenhuma notícia encontrada</h1>
 <% end %>
 
 <% @items.each do |item| %>
