Trocar 'Cadastrar' ao inves de 'Registrar' (cai como erro de teste)

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -23,7 +23,7 @@
 	    <button class="btn btn-default reveal" type="button"><i class="glyphicon glyphicon-eye-open"></i></button>
 		</div>
 		<button class="btn btn-dark btn-block login-button" type="submit"><i class="fa fa-sign-in"></i> 
-		Registrar
+		Cadastrar
 	    </button>
 	    <% end %>	
 	    </form>			
