--- a/app/views/news/_news_card.html.erb
+++ b/app/views/news/_news_card.html.erb
@@ -19,13 +19,13 @@
 </script>
 
 
-<div class="news-card card bg-light mb-3 d-flex flex-row">
+<div class="news-card card bg-light mb-3 row d-flex flex-row">
     <% if item.image_url %>
-        <div class="card-image" style="background-image: url('<%= item.image_url %>');"></div>
+        <div class="card-image col-sm-4" style="background-image: url('<%= item.image_url %>');"></div>
     <% end %>
-    <div class="card-body">
+    <div class="card-body col-sm-8">
         <h5 class="card-title"><%= item.title %></h5>
-        <p class="card-text"><%= strip_tags(item.summary) %></p>
+        <p class="card-text text-truncate"><%= strip_tags(item.summary) %></p>
 	<br><br><br>
         <a href="<%= item.url %>" target=_blank class="card-link">
 	<button type="button" onclick="access_counter(<%= item.id %>)" class="btn btn-dark">Ler a notícia</button>
