--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,15 +23,11 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Listar por
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	      <%= link_to({ controller: "/news", action: "search_by_access" }, method: "get", class:"dropdown-item") do %>
+	<li class="nav-item active">
+		<%= link_to({ controller: "/news", action: "search_by_access" }, method: "get", class: "nav-link") do %>
                 Mais acessados
-	      <% end %>
-          </li>
+	    	<% end %>
+        </li>
           <li class="nav-item active">
             <a class="nav-link" href="/about">
               Sobre
